<resources>
    <string name="app_name">AlarmClock</string>

    <string name="action_settings">Settings</string>
    <string name="mew_alarm_clock">New Alarm Clock</string>
    <string name="music_list">Music list</string>
    <string name="change_time">Change Time</string>
    <string name="delete_alarm">Delete alarm</string>
    <string name="notification_text" formatted="false">%s: %s.</string>
    <string name="choose_music">Choose Music</string>
    <string name="repeat">Repeat</string>
    <string name="vibrate">Vibrate</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="no_alarms">No Alarms</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="alarm_clock">Alarm clock</string>
    <string name="delete">Delete</string>
    <string name="off">Off</string>
    <string name="choice_melody">Choice melody</string>
    <string name="defer">Defer</string>

    <string name="menu_item_new">New</string>
    <string name="menu_item_save">Save</string>
    <string name="menu_item_delete">Cancel</string>
    <string name="menu_item_rate">Rate on Google Play</string>
    <string name="menu_item_website">Website</string>
    <string name="menu_item_report">Report a Bug</string>

    <string name="alarm_clock_deleted">Alarm clock deleted</string>
    <string name="menu_delete">Delete</string>
    <string name="alarm_on">Alarms on</string>
    <string name="alarm_off">Alarms off</string>
    <string name="menu_edit">Edit</string>
    <string name="alarm_start_time">Alarm will start at: </string>

    <string name="do_not_show_splash">Don\'t show splash</string>
    <string name="language">Language</string>
    <string name="setting_application">Setting application</string>
    <string name="title_repeat_time_interval_alarm">Interval to repeat(min)</string>
    <string name="time_play_song">Play time signal(min)</string>
    <string name="volume_play_song">Play volume</string>
    <string name="title_setting">Global Setting</string>
    <string name="ru">string</string>
    <string name="bg">string</string>

    <string name="toast_start_time">Start time:</string>



</resources>
