<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/intervalData"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentEnd="true"
    android:layout_alignParentRight="true"
    android:layout_below="@+id/time_picker"
    android:gravity="center"
    android:visibility="gone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text="@string/mon"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text="@string/tue"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text="@string/wed"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text="@string/thu"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text="@string/fri"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text="@string/sat"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sun"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/ckbMon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/listTime"
            android:layout_alignStart="@+id/listTime"
            android:layout_centerVertical="true" />

        <CheckBox
            android:id="@+id/ckbTue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/listTime"
            android:layout_alignStart="@+id/listTime"
            android:layout_centerVertical="true" />

        <CheckBox
            android:id="@+id/ckbWed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/listTime"
            android:layout_alignStart="@+id/listTime"
            android:layout_centerVertical="true" />

        <CheckBox
            android:id="@+id/ckbThu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/listTime"
            android:layout_alignStart="@+id/listTime"
            android:layout_centerVertical="true" />

        <CheckBox
            android:id="@+id/ckbFri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/listTime"
            android:layout_alignStart="@+id/listTime"
            android:layout_centerVertical="true" />

        <CheckBox
            android:id="@+id/ckbSat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/listTime"
            android:layout_alignStart="@+id/listTime"
            android:layout_centerVertical="true" />

        <CheckBox
            android:id="@+id/ckbSun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/listTime"
            android:layout_alignStart="@+id/listTime"
            android:layout_centerVertical="true" />
    </LinearLayout>
</RelativeLayout>

