<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="top"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="@drawable/radius_white"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp">

        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/black" />

        <RelativeLayout
            android:id="@+id/intervalData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/time_picker"
            android:visibility="gone"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"

                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/mon"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/tue"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/wed"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/thu"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/fri"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/sat"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/sun"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/wrapperCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/ckbMon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/radius" />

                <CheckBox
                    android:id="@+id/ckbTue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/radius" />

                <CheckBox
                    android:id="@+id/ckbWed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/radius" />

                <CheckBox
                    android:id="@+id/ckbThu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/radius" />

                <CheckBox
                    android:id="@+id/ckbFri"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/radius" />

                <CheckBox
                    android:id="@+id/ckbSat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/radius" />

                <CheckBox
                    android:id="@+id/ckbSun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:background="@drawable/radius" />
            </LinearLayout>
        </RelativeLayout>

        <!--<include layout="@layout/days_of_week"></include>-->

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/wrapper_choose_music"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/time_picker"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:weightSum="1.0">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/wrapperAddMusic"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight=".5"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/addMusic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/intervalData"
                    android:layout_gravity="center"
                    android:background="@color/colorPrimary"
                    android:text="@string/choose_music"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/addCurrentMusic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:clickable="true"
                    android:text="@string/repeat"
                    android:textColor="@android:color/black"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight=".5">

                <TextView
                    android:id="@+id/repeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp"
                    android:text="@string/repeat"
                    android:textColor="@android:color/black" />

                <CheckBox
                    android:id="@+id/repeatAlarm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/radius" />
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight=".5">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp"
                    android:text="@string/vibrate"
                    android:textColor="@android:color/black" />

                <CheckBox
                    android:id="@+id/vibrateAlarm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/radius" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.5"
            android:gravity="top"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/volume_play_song"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="22dp" />

            <TextView
                android:id="@+id/volumeAlarmAppValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="0" />

            <SeekBar
                android:id="@+id/volumeAlarm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="100" />
        </LinearLayout>


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addAlarm"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_weight=".5"
                android:background="@color/colorPrimary"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <Button
                android:id="@+id/cancelAlarm"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:background="@color/colorPrimary"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>

