<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:tool="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/wrapperClock"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="0.5">

            <TextView
                android:id="@+id/TitleSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/title_setting"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.5"
            android:gravity="top">

            <Spinner
                android:id="@+id/languageApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_weight="0.5"
            android:gravity="top">

            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="22dp"
                android:text="@string/volume_play_song"/>

            <TextView
                android:id="@+id/volumeAlarmAppValue"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                tools:text="35"
                android:text="0"/>

            <SeekBar
                android:id="@+id/volumeAlarmApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:gravity="top">

            <Button
                android:id="@+id/defaultMelodyApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/mybutton"
                android:text="@string/choice_melody"
                android:textColor="@android:color/holo_blue_dark" />

            <TextView
                android:id="@+id/tVDefaultMelodyApp"
                android:layout_weight="1"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/time_play_song"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lLRepeatTimeIntervalAlarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleTimePlaySong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/time_play_song"
                android:textColor="@android:color/holo_blue_dark"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/timePlaySongAppValue"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                tools:text="35"
                android:text="0"/>

            <SeekBar
                android:id="@+id/timePlaySongApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="10"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleRepeatTimeIntervalAlarm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@android:color/holo_blue_dark"
                android:text="@string/title_repeat_time_interval_alarm"
                android:textAppearance="?android:attr/textAppearanceLarge" />


            <TextView
                android:id="@+id/repeatTimeIntervalAppValue"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                tools:text="35"
                android:text="0"/>

            <SeekBar
                android:id="@+id/repeatTimeIntervalApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="60"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="bottom">

            <Button
                android:id="@+id/saveSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/mybutton"
                android:text="@string/save"
                android:textColor="@android:color/holo_blue_dark" />

            <Button
                android:id="@+id/saveCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/mybutton"
                android:text="@string/cancel"
                android:textColor="@android:color/holo_blue_dark" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>